src/snapshots/len__lexer__tests__symbol-7.snap
---
source: src/lexer.rs
expression: "(input, p.parse(input))"
---
(
    " () , . ",
    ParseResult {
        output: None,
        errs: [
            at 1..2,
        ],
    },
)
