src/snapshots/len__lexer__tests__unicode_ident-2.snap
---
source: src/lexer.rs
expression: "unicode_ident().padded().parse(\" abc \")"
---
ParseResult {
    output: Some(
        "abc",
    ),
    errs: [],
}
