src/snapshots/len__lexer__tests__unicode_ident-3.snap
---
source: src/lexer.rs
expression: "unicode_ident().parse(\" \")"
---
ParseResult {
    output: None,
    errs: [
        EmptyErr(
            (),
        ),
    ],
}
