src/snapshots/len__lexer__tests__unicode_ident-4.snap
---
source: src/lexer.rs
expression: "unicode_ident().padded().parse(\" ( ) \")"
---
ParseResult {
    output: None,
    errs: [
        EmptyErr(
            (),
        ),
    ],
}
