src/snapshots/len__lexer__tests__unicode_ident.snap
---
source: src/lexer.rs
expression: "unicode_ident().padded().parse(\" + \")"
---
ParseResult {
    output: Some(
        "+",
    ),
    errs: [],
}
